docs: avoid anchors being hidden behind sticky header

--- a/docs/src/components/api.module.css
+++ b/docs/src/components/api.module.css
@@ -4,6 +4,14 @@
   --code-foreground-color: white;
 }
 
+main *[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -5rem;
+  height: 5rem;
+  visibility: hidden;
+}
+
 main h2:first-child {
   margin-top: 0;
 }
